[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["notmeowmeow <ivid09390@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0b6"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
